--- a/alex_work_branch/visualizations.ipynb
+++ b/alex_work_branch/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "id": "818f1532-4b1f-4164-8d77-6144110f0d5c",
    "metadata": {},
    "outputs": [],
@@ -26,19 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "2531b976-d140-4da9-86c1-d5431a1d9073",
    "metadata": {},
    "outputs": [],
    "source": [
     "# constatnts\n",
-    "INPUT_CSV_PATH = \"DOHMH_Dog_Bite_Data.csv\"\n",
+    "INPUT_CSV_PATH = \"../Resources/DOHMH_Dog_Bite_Data.csv\"\n",
     "DEFAULT_BREED = 'unknown'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "30030e5e-619d-4a75-95aa-d3dabd1d708f",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4  Brooklyn   11224  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5abbbb53-ecbb-4074-9dbe-dba1a38d72e3",
    "metadata": {},
    "outputs": [],
@@ -187,10 +187,11 @@
     "# Used XPERT to get ideas on how to tackle age.  There were several types of data scrubbing needed for age with this dataset.\n",
     "def convert_age_to_decimal(age_str):\n",
     "    age_str = str(age_str)\n",
-    "    week_match = re.search(r'(\\d+)\\s*(WKS|W|WEEK|WEEKS)', age_str)\n",
-    "    month_match = re.search(r'(\\d+)\\s*(MTHS|M|MTH|MONTH)', age_str)\n",
-    "    year_match = re.search(r'(\\d+)\\s*(YRS|Y|YR|YEAR)', age_str)\n",
-    "    combined_match = re.search(r'(\\d+)\\s*(&)', age_str)    # Extract Combined Year and Month data when & sign is used.\n",
+    "    #regular expressions to search for various age words to assist with conversion to decimal\n",
+    "    week_match = re.search(r'(\\d+)\\s*(WKS|W|WEEK|WEEKS)', age_str) #convert age in weeks to decimal\n",
+    "    month_match = re.search(r'(\\d+)\\s*(MTHS|M|MTH|MONTH)', age_str) #convert age in months to decimal\n",
+    "    year_match = re.search(r'(\\d+)\\s*(YRS|Y|YR|YEAR)', age_str) # convert age in year to decimal\n",
+    "    combined_match = re.search(r'(\\d+)\\s*(&)', age_str)    # convert age in year and months to decimal\n",
     "    \n",
     "    if week_match:\n",
     "        weeks = int(week_match.group(1))\n",
@@ -214,13 +215,13 @@
     "        try:\n",
     "            decimal_age = float(age_str)\n",
     "        except ValueError:\n",
-    "            decimal_age = None\n",
+    "            decimal_age = None # example of bad data is a timestamp for the age\n",
     "    return decimal_age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "170e0c64-ad6d-4594-bb3a-751d0a088a33",
    "metadata": {},
    "outputs": [],
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "19b01139-1ce3-44e2-a917-db7653fdc698",
    "metadata": {},
    "outputs": [],
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "914192fe-38cb-4f0c-9dd7-f7cc484c864d",
    "metadata": {},
    "outputs": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "23fde8c7-fd82-4949-b63c-ae0ff16026ba",
    "metadata": {},
    "outputs": [
@@ -299,7 +300,7 @@
        "Name: DateOfBite, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "6c8738fa-f6f0-4001-ae9d-b3470613224d",
    "metadata": {},
    "outputs": [
@@ -453,13 +454,13 @@
        "11        True  Brooklyn   11208          7.0  2018      1    7          6  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# split to year, month, day, dayofweek, weekname and droped the DateOFBite, Species column.\n",
+    "# split to year, month, day, dayofweek, weekname and, Species column.\n",
     "dog_df['Year'] = dog_df['DateOfBite'].dt.year\n",
     "dog_df['Month'] = dog_df['DateOfBite'].dt.month\n",
     "dog_df['Day'] = dog_df['DateOfBite'].dt.day \n",
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "d09f0ff5-0713-4b5a-9bf8-10d95d45a7ad",
    "metadata": {},
    "outputs": [
@@ -624,7 +625,7 @@
        "11  Winter  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,16 +635,14 @@
     "season = {12: 'Winter', 1: 'Winter', 2: 'Winter', 3: 'Spring', 4: 'Spring', 5: 'Spring',\n",
     "           6: 'Summer', 7: 'Summer', 8: 'Summer', 9: 'Fall', 10: 'Fall', 11: 'Fall'}\n",
     "\n",
-    "# Create a new column 'Seasons' based on the mapping\n",
-    "\n",
+    "# Create a new column 'Seasons' based on the months\n",
     "dog_df['Seasons'] = dog_df['Month'].map(season)\n",
-    "\n",
     "dog_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "2b933254-4e62-4d27-802e-083c130f1a4c",
    "metadata": {},
    "outputs": [
@@ -803,7 +802,7 @@
        "11  Winter     Sunday  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,15 +812,14 @@
     "weekname = {0: 'Monday', 1: 'Tuesday', 2: 'Wednesday', 3: 'Thursday', 4: 'Friday', 5: 'Saturday',\n",
     "           6: 'Sunday'}\n",
     "\n",
-    "# Create a new column 'season' based on the mapping\n",
+    "# Create a new column 'DayOfWeek' based on the day column\n",
     "dog_df['DayOFWeek'] = dog_df['DayOfWeek'].map(weekname)\n",
-    "\n",
     "dog_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "a01bf46f-3187-40c9-a2a2-b795c55baf93",
    "metadata": {},
    "outputs": [
@@ -987,7 +985,7 @@
        "3   Winter     Monday  weekday  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,6 +994,7 @@
     "# Establish the bins.\n",
     "size_bins= [0,4,6]\n",
     "labels = [\"weekday\" , \"weekend\"]\n",
+    "\n",
     "# Categorize the weenday based on the bins\n",
     "# Use `pd.cut` on the \"DayOfWeek\" column of the `dog_df` DataFrame.\n",
     "dog_df[\"WeekDay\"]=pd.cut(dog_df[\"DayOfWeek\"],size_bins,labels=labels,include_lowest=True)\n",
@@ -1012,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "14d44bf3-61e0-4023-b3da-bf7f378c6668",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "edac6c0c-6f02-45fe-acb5-1cd2230b42ef",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "3e5d0bd7-5d69-475c-a4b6-1d266cc0bf6f",
    "metadata": {},
    "outputs": [],
@@ -1054,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "2e6de9c1-473b-4717-b620-4aae055dfac5",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "6dfc48a5-c4b4-485e-a932-483e70ccd15e",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "38b63948-342d-425e-8653-fec86cd4ea14",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "bef9bd35-e3c0-4b23-8564-b00ca8457eac",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "b685c1a5-f37d-4926-807f-d4a2a9ae6190",
    "metadata": {},
    "outputs": [],
@@ -1383,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "aeb24671-be5b-484b-8436-0587f887ff4e",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "5dee7943-8b77-4934-9d26-b0415ea0b6e7",
    "metadata": {},
    "outputs": [
@@ -1489,7 +1488,7 @@
        "4     0.192308          1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1502,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "e2c8b1f6-adf0-4206-a88d-fb8ee0bbecc0",
    "metadata": {},
    "outputs": [
@@ -1552,7 +1551,7 @@
        "num_bites      -0.018141   1.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "20fa7bb9-2706-44d2-a5e8-8df12923e827",
    "metadata": {},
    "outputs": [],
@@ -1585,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "307147c7-1378-4cf8-9e49-c44817b07813",
    "metadata": {},
    "outputs": [],
@@ -1595,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "d55732b7-b4b9-4ca4-b3b0-d6f59ceb2dea",
    "metadata": {},
    "outputs": [],
@@ -1605,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "c3e1080f-e33c-4ae3-aca7-7a5b02965906",
    "metadata": {},
    "outputs": [],
@@ -1619,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "29090b25-0747-4d13-ada4-48920af5c270",
    "metadata": {},
    "outputs": [],
@@ -1632,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "797535ee-914b-4de4-94a3-a57d75dd6f10",
    "metadata": {},
    "outputs": [],
@@ -1645,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "bf324679-1a5a-49f7-ac86-11c64d967afa",
    "metadata": {},
    "outputs": [],
@@ -1655,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "a15f172b-d36b-44e0-b24a-c25e7ebe15bf",
    "metadata": {},
    "outputs": [],
@@ -1666,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "5688cc36-d7f0-493d-853f-193224440553",
    "metadata": {},
    "outputs": [],
@@ -1684,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "14356fbf-7bf3-46ae-be37-8f292523e7f9",
    "metadata": {},
    "outputs": [
@@ -1700,11 +1699,11 @@
     }
    ],
    "source": [
-    "sizes = [2609, 473, 362, 323, 286, 251, 249, 227, 174, 141]  # Number of female and male mice\n",
+    "sizes = [2609, 473, 362, 323, 286, 251, 249, 227, 174, 141]\n",
     "labels = ['pit bull', 'shih tzu', 'german shepard', 'chihuahua', 'yorkshire terrier', 'bull dog', 'retriever', 'maltese', 'siberian husky', 'rottweiler']\n",
     "colors = ['#BDC667','#77966D', '#626D58', '#544343', '#56282D', '#653C40', '#734E51', '#8C6D6F', '#C0999C', '#4652AD']\n",
     "# Set the explode levels for each slice\n",
-    "explode = [0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05]  # Explode the first slice (Female)\n",
+    "explode = [0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05]  # Explode the first slice \n",
     "# Step 2: Make the canvas\n",
     "plt.figure(figsize=(8, 6))\n",
     "# Step 3: Make the plot\n",
@@ -1718,7 +1717,6 @@
     "plt.legend(['pit bull', 'shih tzu', 'german shepard', 'chihuahua', 'yorkshire terrier', 'bull dog', 'retriever', 'maltese', 'siberian husky', 'rottweiler', 'jack russ', 'cocker spaniel', 'shiba inu', 'dachshund', 'beagle', 'pomeranian'])\n",
     "plt.legend(loc='upper right', bbox_to_anchor=(1.4, 1.2))\n",
     "\n",
-    "# plt.ylabel(\"Sex\")\n",
     "# Display the plot\n",
     "plt.show()"
    ]
@@ -1733,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "247f4ed0-8f7b-400a-8985-12bef8215610",
    "metadata": {},
    "outputs": [
@@ -1795,7 +1793,7 @@
        "3  Winter       1589"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1808,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "945bc6cc-9c93-4639-8783-033a1e5e0d0f",
    "metadata": {},
    "outputs": [
@@ -1849,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "id": "6285b243-f322-4cb3-aa9c-5fb82b2e99de",
    "metadata": {},
    "outputs": [
@@ -1929,7 +1927,7 @@
        "0     Friday       1038"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "284c54df-300a-4c6d-81e7-77b96cb3b179",
    "metadata": {},
    "outputs": [
@@ -1983,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "672f139f-a47d-44cb-ab0d-bafa30ef33de",
    "metadata": {},
    "outputs": [
@@ -2063,7 +2061,7 @@
        "0  2015       1420"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "id": "f662c9fc-3d6a-4c6b-bdf1-4007d51afe25",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "id": "f6c94a55-f8bf-420e-ad34-1dc3b8c6546e",
    "metadata": {},
    "outputs": [
@@ -2130,7 +2128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Anaconda\\envs\\dev\\lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
+      "C:\\Anaconda\\Lib\\site-packages\\seaborn\\_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
       "  with pd.option_context('mode.use_inf_as_na', True):\n"
      ]
     },
@@ -2146,24 +2144,22 @@
     }
    ],
    "source": [
-    "## Step 1: get the data\n",
+    "# Step 1: get the data\n",
     "x = clean_df.age_decimal\n",
     "# create the plot\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.histplot(clean_df.age_decimal, color=\"#4652AD\", kde=True, bins=20, alpha=0.15)\n",
     "# customizations\n",
-    "# sns.kdeplot(clean_df.age_decimal, color='blue')\n",
     "plt.xlabel('Age', fontstyle=\"italic\", fontsize=12)\n",
     "plt.title('Histogram of Dog Age', fontsize=16, fontweight='bold')\n",
     "plt.ylim(0, 1600)\n",
     "plt.grid(color='lightgrey', axis='y', linestyle='--', alpha=0.25)\n",
-    "# show\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "id": "e96a0bf3-95eb-4334-9ab8-93ac6b5fac2b",
    "metadata": {},
    "outputs": [
@@ -2179,8 +2175,6 @@
     }
    ],
    "source": [
-    "# Step 1: get the data\n",
-    "# x = clean_df.age_decimal\n",
     "# create the plot\n",
     "plt.figure(figsize=(10,6))\n",
     "sns.violinplot(clean_df.age_decimal.values, color='#C0999C')\n",
@@ -2188,9 +2182,7 @@
     "plt.xlabel('Count', fontstyle='italic', fontsize=12)\n",
     "plt.ylabel('Age', fontstyle='italic', fontsize=12)\n",
     "plt.title('Violinplot of Age', fontsize=16, fontweight='bold')\n",
-    "# plt.ylim(-1000, 17000)\n",
     "plt.grid(color='lightgrey', axis='y', linestyle='--', alpha=0.25)\n",
-    "# show\n",
     "plt.show()"
    ]
   },
@@ -2204,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "id": "229c1da1-2557-43dc-9ce4-4724845ec005",
    "metadata": {},
    "outputs": [
@@ -2272,7 +2264,7 @@
        "4     0.192308          1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,23 +2277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "id": "3499ca2c-16c1-4239-bbfa-2f4f946a252a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\moore\\AppData\\Local\\Temp\\ipykernel_10032\\3945126938.py:11: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"r-\" (-> color='r'). The keyword argument will take precedence.\n",
+      "  plt.plot(x_values, regress_values, \"r-\", color='#48B124') # plot the line of best fit\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "The r-squared is: 0.00032908540749924215\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\moore\\AppData\\Local\\Temp\\ipykernel_35060\\1453702006.py:13: UserWarning: color is redundantly defined by the 'color' keyword argument and the fmt string \"r-\" (-> color='r'). The keyword argument will take precedence.\n",
-      "  plt.plot(x_values, regress_values, \"r-\", color='#48B124') # plot the line of best fit\n"
      ]
     },
     {
@@ -2324,12 +2316,10 @@
     "regress_values = x_values * slope + intercept # calculate the predictions\n",
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "# make the plot\n",
-    "# Step 2: Make the canvas\n",
     "plt.figure(figsize=(10, 6))\n",
-    "# Step 3: Make the basic plot\n",
     "plt.scatter(x_values, y_values, facecolor=\"#4652AD\", edgecolor=\"#544343\", s=100)\n",
     "plt.plot(x_values, regress_values, \"r-\", color='#48B124') # plot the line of best fit\n",
-    "# Step 4: Customizations\n",
+    "# Customizations\n",
     "plt.xlabel('Age', fontsize=12, fontstyle=\"italic\")\n",
     "plt.ylabel('# of Bites', fontsize=12, fontstyle=\"italic\")\n",
     "plt.title('Number of Bites vs Age', fontweight='bold', fontsize=16)\n",
@@ -2338,14 +2328,6 @@
     "print(f\"The r-squared is: {rvalue**2}\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6544f4e-d784-4da5-b403-700fdc5a884d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2364,7 +2346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
