--- a/thripura_work/Project_data_Transformation_dates.ipynb
+++ b/thripura_work/Project_data_Transformation_dates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "27823c51",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "import json\n",
-    "\n"
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 4,
    "id": "472e7e48",
    "metadata": {},
    "outputs": [
@@ -134,14 +133,14 @@
        "4  Brooklyn   11224  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the restaurant ethnicities into a DataFrame\n",
-    "dog_df = pd.read_csv(\"DOHMH_Dog_Bite_Data.csv\")\n",
+    "dog_df = pd.read_csv(\"../Resources/DOHMH_Dog_Bite_Data.csv\")\n",
     "\n",
     "# Display sample data\n",
     "dog_df.head()"
