--- a/Joy_work/dog_age.ipynb
+++ b/Joy_work/dog_age.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4  Brooklyn   11224  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
     "from pathlib import Path\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
-    "dog_data = Path(\"Resources/DOHMH_Dog_Bite_Data.csv\")\n",
+    "dog_data = Path(\"../Resources/DOHMH_Dog_Bite_Data.csv\")\n",
     "\n",
     "# Read School and Student Data File and store into Pandas DataFrames\n",
     "dog_df = pd.read_csv(dog_data)\n",
@@ -545,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
