--- a/Joy_work/dog_age.ipynb
+++ b/Joy_work/dog_age.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -118,25 +118,24 @@
        "4  Brooklyn   11224  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Dependencies and Setup\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "#\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "# File to Load (Remember to Change These)\n",
+    "#File to Load (Remember to Change These)\n",
     "dog_data = Path(\"../Resources/DOHMH_Dog_Bite_Data.csv\")\n",
     "\n",
-    "# Read School and Student Data File and store into Pandas DataFrames\n",
+    "#Read School and Student Data File and store into Pandas DataFrames\n",
     "dog_df = pd.read_csv(dog_data)\n",
     "\n",
     "dog_df.head()\n"
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +396,7 @@
        "max           NaN     NaN     NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,104 +424,387 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# age, clean and convert\n",
     "# Used XPERT to get ideas on how to tackle age.  There were several types of data scrubbing needed for age with this dataset.\n",
     "def convert_age_to_decimal(age_str):\n",
-    "    # Import re to assist with age conversion\n",
-    "    import re\n",
-    "\n",
-    "    # Extract numeric values for months and years\n",
-    "    months = 0\n",
-    "    years = 0\n",
-    "    weeks = 0\n",
-    "    yearmonth = 0\n",
-    "\n",
-    "\n",
-    "    # Extract weeks\n",
+    "    age_str = str(age_str)\n",
     "    week_match = re.search(r'(\\d+)\\s*(WKS|W|WEEK|WEEKS)', age_str)\n",
+    "    month_match = re.search(r'(\\d+)\\s*(MTHS|M|MTH|MONTH)', age_str)\n",
+    "    year_match = re.search(r'(\\d+)\\s*(YRS|Y|YR|YEAR)', age_str)\n",
+    "    combined_match = re.search(r'(\\d+)\\s*(&)', age_str)    # Extract Combined Year and Month data when & sign is used.\n",
+    "    \n",
     "    if week_match:\n",
     "        weeks = int(week_match.group(1))\n",
     "        weeks = weeks/52\n",
-    "        decimal_age = weeks\n",
-    "        \n",
-    "    # Extract months\n",
-    "    month_match = re.search(r'(\\d+)\\s*(MTHS|M|MTH|MONTH)', age_str)\n",
-    "    if month_match:\n",
+    "        decimal_age = weeks    \n",
+    "    elif month_match:\n",
     "        months = int(month_match.group(1))\n",
     "        months = months/12\n",
     "        decimal_age = months\n",
-    "\n",
-    "    # Extract years\n",
-    "    year_match = re.search(r'(\\d+)\\s*(YRS|Y|YR|YEAR)', age_str)\n",
-    "    if year_match:\n",
+    "    elif year_match:\n",
     "        years = int(year_match.group(1))\n",
     "        decimal_age = years\n",
-    "\n",
-    "    #Extract Combined Year and Month data when & sign is used.\n",
-    "    combined_match = re.search(r'(\\d+)\\s*(&)', age_str)\n",
-    "    if combined_match:\n",
+    "    elif combined_match:\n",
     "        yearmonth = re.split(r'\\s*&\\s*', age_str)\n",
     "        year = int(yearmonth[0])\n",
     "        month = int(yearmonth[1])/12\n",
     "        yearmonth = year + month\n",
     "        decimal_age = yearmonth\n",
-    "\n",
+    "    else:\n",
+    "        # raise ValueError(f'No match for {age_str}')\n",
+    "        try:\n",
+    "            decimal_age = float(age_str)\n",
+    "        except ValueError:\n",
+    "            decimal_age = None\n",
     "    return decimal_age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dog_df['age_decimal'] = dog_df['Age'].map(convert_age_to_decimal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UniqueID</th>\n",
+       "      <th>DateOfBite</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>SpayNeuter</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>ZipCode</th>\n",
+       "      <th>age_decimal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>January 01 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11220</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>January 04 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>January 06 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>Pit Bull</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11224</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>January 08 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>Mixed/Other</td>\n",
+       "      <td>4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11231</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>January 09 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>Pit Bull</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11224</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>96</td>\n",
+       "      <td>February 28 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>SHEPHERD/POINTER X</td>\n",
+       "      <td>1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11209</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>97</td>\n",
+       "      <td>March 05 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>Boxer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11215</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>98</td>\n",
+       "      <td>March 06 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>Shih Tzu</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>99</td>\n",
+       "      <td>March 06 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>American Pit Bull Terrier/Pit Bull</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>U</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11220</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>100</td>\n",
+       "      <td>March 06 2018</td>\n",
+       "      <td>DOG</td>\n",
+       "      <td>MIXED BREED</td>\n",
+       "      <td>13</td>\n",
+       "      <td>M</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>11229</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    UniqueID        DateOfBite Species                               Breed  \\\n",
+       "0          1   January 01 2018     DOG                             UNKNOWN   \n",
+       "1          2   January 04 2018     DOG                             UNKNOWN   \n",
+       "2          3   January 06 2018     DOG                            Pit Bull   \n",
+       "3          4   January 08 2018     DOG                         Mixed/Other   \n",
+       "4          5   January 09 2018     DOG                            Pit Bull   \n",
+       "..       ...               ...     ...                                 ...   \n",
+       "95        96  February 28 2018     DOG                  SHEPHERD/POINTER X   \n",
+       "96        97     March 05 2018     DOG                               Boxer   \n",
+       "97        98     March 06 2018     DOG                            Shih Tzu   \n",
+       "98        99     March 06 2018     DOG  American Pit Bull Terrier/Pit Bull   \n",
+       "99       100     March 06 2018     DOG                         MIXED BREED   \n",
+       "\n",
+       "    Age Gender  SpayNeuter   Borough ZipCode  age_decimal  \n",
+       "0   NaN      U       False  Brooklyn   11220          NaN  \n",
+       "1   NaN      U       False  Brooklyn     NaN          NaN  \n",
+       "2   NaN      U       False  Brooklyn   11224          NaN  \n",
+       "3     4      M       False  Brooklyn   11231          4.0  \n",
+       "4   NaN      U       False  Brooklyn   11224          NaN  \n",
+       "..  ...    ...         ...       ...     ...          ...  \n",
+       "95    1      M        True  Brooklyn   11209          1.0  \n",
+       "96  NaN      U       False  Brooklyn   11215          NaN  \n",
+       "97  NaN      U       False  Brooklyn     NaN          NaN  \n",
+       "98  NaN      U       False  Brooklyn   11220          NaN  \n",
+       "99   13      M        True  Brooklyn   11229         13.0  \n",
+       "\n",
+       "[100 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog_df.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 & 4: 3.3333333333333335\n",
-      "5&6: 5.5\n",
-      "7 &8: 7.666666666666667\n",
-      "8& 9: 8.75\n",
-      "2018-01-01T00:00:00.000: 0\n",
-      "1Y: 1\n",
-      "2 YR: 2\n",
-      "3YRS: 3\n",
-      "4 YEARS: 4\n",
-      "6 YRS: 6\n",
-      "5M: 0.4166666666666667\n",
-      "6 MTH: 0.5\n",
-      "7MTHS: 0.5833333333333334\n",
-      "8 MONTHS: 0.6666666666666666\n",
-      "9W: 0.17307692307692307\n",
-      "10 WK: 0.19230769230769232\n",
-      "11 WKS: 0.21153846153846154\n",
-      "12 WEEKS: 0.23076923076923078\n",
-      "2019-01-01T00:00:00.000: 0\n"
+      "Age Max: 41.0\n",
+      "Age Min: 0.08\n",
+      "Age Mean: 4.52\n",
+      "Age Media: 4.0\n",
+      "Age Mode: 0    2.0\n",
+      "Name: age_decimal, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "# Test the function with sample age values\n",
-    "age_values = ['3 & 4','5&6','7 &8','8& 9','2018-01-01T00:00:00.000','1Y','2 YR','3YRS','4 YEARS','6 YRS','5M','6 MTH','7MTHS','8 MONTHS','9W','10 WK','11 WKS','12 WEEKS','2019-01-01T00:00:00.000']\n",
-    "for age_value in age_values:\n",
-    "    try:\n",
-    "        decimal_age = convert_age_to_decimal(age_value)\n",
-    "        print(f\"{age_value}: {decimal_age}\")\n",
-    "    except:\n",
-    "        decimal_age = 0\n",
-    "        print(f\"{age_value}: {decimal_age}\")"
+    "# Mean, median, mode for Bank Count\n",
+    "age_max = round(dog_df[\"age_decimal\"].max(),2)\n",
+    "age_min = round(dog_df[\"age_decimal\"].min(),2)\n",
+    "age_mean = round(dog_df[\"age_decimal\"].mean(), 2)\n",
+    "age_median = round(dog_df[\"age_decimal\"].astype(\"float\").median(), 2)\n",
+    "age_mode = round(dog_df[\"age_decimal\"].astype(\"float\").mode(), 2)\n",
+    "\n",
+    "print(f\"Age Max: {age_max}\")\n",
+    "print(f\"Age Min: {age_min}\")\n",
+    "print(f\"Age Mean: {age_mean}\")\n",
+    "print(f\"Age Media: {age_median}\")\n",
+    "print(f\"Age Mode: {age_mode}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dog_df.dropna(subset=['age_decimal'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 11387 entries, 3 to 22660\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   UniqueID     11387 non-null  int64  \n",
+      " 1   DateOfBite   11387 non-null  object \n",
+      " 2   Species      11387 non-null  object \n",
+      " 3   Breed        11298 non-null  object \n",
+      " 4   Age          11387 non-null  object \n",
+      " 5   Gender       11387 non-null  object \n",
+      " 6   SpayNeuter   11387 non-null  bool   \n",
+      " 7   Borough      11387 non-null  object \n",
+      " 8   ZipCode      9917 non-null   object \n",
+      " 9   age_decimal  11387 non-null  float64\n",
+      "dtypes: bool(1), float64(1), int64(1), object(7)\n",
+      "memory usage: 900.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dog_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age Max: 41.0\n",
+      "Age Min: 0.08\n",
+      "Age Mean: 4.52\n",
+      "Age Media: 4.0\n",
+      "Age Mode: 0    2.0\n",
+      "Name: age_decimal, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mean, median, mode for Bank Count\n",
+    "age_max = round(dog_df[\"age_decimal\"].max(),2)\n",
+    "age_min = round(dog_df[\"age_decimal\"].min(),2)\n",
+    "age_mean = round(dog_df[\"age_decimal\"].mean(), 2)\n",
+    "age_median = round(dog_df[\"age_decimal\"].astype(\"float\").median(), 2)\n",
+    "age_mode = round(dog_df[\"age_decimal\"].astype(\"float\").mode(), 2)\n",
+    "\n",
+    "print(f\"Age Max: {age_max}\")\n",
+    "print(f\"Age Min: {age_min}\")\n",
+    "print(f\"Age Mean: {age_mean}\")\n",
+    "print(f\"Age Media: {age_median}\")\n",
+    "print(f\"Age Mode: {age_mode}\")"
+   ]
   }
  ],
  "metadata": {
@@ -545,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
